# paperless-paddleocr

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  LICENSE  README.md  pyproject.toml  setup-gpu.sh  setup.sh
.github/workflows/: ci.yml  smoke.yml
docker/: builder.Dockerfile
docs/superpowers/plans/: 2026-05-22-paddle-engine-mit-rewrite.md  2026-07-02-banded-column-detection.md  2026-07-02-docs-and-infra-cleanup.md  2026-07-02-engine-instance-caching.md  2026-07-02-language-map-corrections.md  2026-07-02-layout-correctness-fixes.md  2026-07-02-mkldnn-reverification.md  2026-07-02-multilang-merge-tests-and-vl-single-pass.md  2026-07-02-page-level-reading-order.md  2026-07-02-rotate-and-deskew-support.md  2026-07-02-vl-remote-hardening.md
docs/superpowers/reviews/: 2026-07-02-full-project-review.md
docs/superpowers/specs/: 2026-05-22-paddle-engine-mit-rewrite-design.md
examples/: Dockerfile.classic-cpu  Dockerfile.classic-gpu  Dockerfile.vl-remote  docker-compose.classic-cpu.yml  docker-compose.classic-gpu.yml  docker-compose.vl-remote.yml  vllm_config.yaml
examples/extract-wheel/: README.md
paperless_paddleocr/: __init__.py  languages.py  ocrmypdf_plugin.py  parser.py
paperless_paddleocr/paddle_engine/: __init__.py  classic.py  deskew.py  engine.py  geometry.py  hocr.py  layout.py  orientation.py  pdf.py  vl.py
scripts/: bench_classic_cpu.py
tests/: smoke_paperless.py  test_check_options_gpu.py  test_classic_baseline.py  test_classic_device.py  test_classic_engine_cache.py  test_deskew.py  test_engine_languages.py  test_engine_reading_order.py  test_generate_pdf_dispatch.py  test_geometry.py  test_hocr_lang.py  test_hocr_render.py  test_languages_paddle3.py  test_layout.py  test_multilang_merge.py  test_orientation.py  test_parse_hocr_words.py  test_vl_baseline.py  test_vl_ocr_page.py  test_vl_pipeline_cache.py  test_vl_pipeline_version.py  test_vl_preflight.py  test_vl_server_url.py  test_vl_spotting_columns.py  test_words_to_text_columns.py
